public interface LaundryMachine {

    public void chooseProgram();

    public void displayPriceAndDuration();

    public void start();

    public void addExtra();

}